; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/axgbe/extr_xgbe-drv.c_xgbe_one_poll.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/axgbe/extr_xgbe-drv.c_xgbe_one_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xgbe_channel = type { i32 }

@.str = private unnamed_addr constant [29 x i8] c"-->xgbe_one_poll: budget=%d\0A\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"<--xgbe_one_poll: received = %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xgbe_channel*, i32)* @xgbe_one_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xgbe_one_poll(%struct.xgbe_channel* %0, i32 %1) #0 {
  %3 = alloca %struct.xgbe_channel*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.xgbe_channel* %0, %struct.xgbe_channel** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @DBGPR(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = load %struct.xgbe_channel*, %struct.xgbe_channel** %3, align 8
  %9 = call i32 @xgbe_tx_poll(%struct.xgbe_channel* %8)
  %10 = load %struct.xgbe_channel*, %struct.xgbe_channel** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @xgbe_rx_poll(%struct.xgbe_channel* %10, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @DBGPR(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i32 %13)
  %15 = load i32, i32* %5, align 4
  ret i32 %15
}

declare dso_local i32 @DBGPR(i8*, i32) #1

declare dso_local i32 @xgbe_tx_poll(%struct.xgbe_channel*) #1

declare dso_local i32 @xgbe_rx_poll(%struct.xgbe_channel*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
